--- a/index.html
+++ b/index.html
@@ -14,36 +14,38 @@
 
   <main>
     <section class="intro">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Wikimedia_Foundation_Servers-8055_16.jpg" alt="Serveurs" />
-      <div>
-        <h2>Bienvenue !</h2>
-        <p>
-          Je m’appelle Kylian, étudiant passionné par l’administration réseau et la maintenance informatique.  
-          J’ai déjà monté un serveur multimédia Jellyfin sur un vieux PC et je progresse chaque jour dans mes apprentissages.
-        </p>
-      </div>
-    </section>
+        <img src="https://lh3.googleusercontent.com/a/ACg8ocILQyIRskRNKMsx99VhukTaIfXRgOWBKxgViW4nLeGsDclVUHRg=s288-c-no" alt="Photo de Kylian Tolman" />
+        <div>
+          <h2>Bonjour, je suis Kylian</h2>
+          <p>
+            De base, je suis étudiant en comptabilité, mais je souhaite me réorienter vers l'informatique et les systèmes.  
+            Pour le moment, je n’ai encore rien de concret de fait, mais je suis motivé à apprendre et progresser.  
+            J’ai commencé à me familiariser avec Jellyfin et les serveurs en machine virtuelle.  
+            La domotique et les compétences réseau restent à découvrir pour moi.
+          </p>
+        </div>
+      </section>
+      
+      
 
     <section class="skills-goals">
       <div class="skills">
         <h2>🛠️ Compétences Actuelles</h2>
         <ul>
-          <li>Installation de serveurs multimédia (Jellyfin)</li>
-          <li>Déploiement d'une machine virtuelle Ubuntu Server</li>
-          <li>Notions de base en réseaux (LAN, IP, DHCP...)</li>
-          <li>Utilisation de logiciels libres et open source</li>
-          <li>Début en domotique avec Raspberry Pi</li>
+            <li>✔️ Installation d’un serveur multimédia Jellyfin</li>
+            <li>✔️ Mise en place d’une machine virtuelle Ubuntu Server</li>
+            <li>❌ Aucune compétence avancée pour le moment, mais je suis en apprentissage</li>
         </ul>
       </div>
 
       <div class="goals">
         <h2>🎯 Objectifs pour 2025</h2>
         <ul>
-          <li>Maîtriser l’administration système Linux</li>
-          <li>Mettre en place un réseau sécurisé avec firewall</li>
-          <li>Gérer un parc informatique</li>
-          <li>Obtenir un stage ou formation en IT</li>
-          <li>Documenter mes projets ici-même</li>
+          <li>🎯 Maîtriser l’administration système Linux</li>
+          <li>🎯 Mettre en place un réseau sécurisé avec firewall</li>
+          <li>🎯 Gérer un parc informatique</li>
+          <li>🎯 Obtenir un stage ou formation en IT</li>
+          <li>🎯 Documenter mes projets ici-même</li>
         </ul>
       </div>
     </section>
