--- a/index.html
+++ b/index.html
@@ -34,18 +34,17 @@
         <ul>
             <li>✔️ Installation d’un serveur multimédia Jellyfin</li>
             <li>✔️ Mise en place d’une machine virtuelle Ubuntu Server</li>
-            <li>❌ Aucune compétence avancée pour le moment, mais je suis en apprentissage</li>
         </ul>
       </div>
 
       <div class="goals">
         <h2>🎯 Objectifs pour 2025</h2>
         <ul>
-          <li>🎯 Maîtriser l’administration système Linux</li>
-          <li>🎯 Mettre en place un réseau sécurisé avec firewall</li>
-          <li>🎯 Gérer un parc informatique</li>
-          <li>🎯 Obtenir un stage ou formation en IT</li>
-          <li>🎯 Documenter mes projets ici-même</li>
+          <li>Maîtriser l’administration système Linux</li>
+          <li>Mettre en place un réseau sécurisé avec firewall</li>
+          <li>Gérer un parc informatique</li>
+          <li>Obtenir un stage ou formation en IT</li>
+          <li>Documenter mes projets ici-même</li>
         </ul>
       </div>
     </section>
