--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="skills">
         <h2>🛠️ Compétences Actuelles</h2>
         <ul>
-            <li>✔️ Installation d’un serveur multimédia Jellyfin</li>
-            <li>✔️ Mise en place d’une machine virtuelle Ubuntu Server</li>
+            <li>Installation d’un serveur multimédia Jellyfin</li>
+            <li>Mise en place d’une machine virtuelle Ubuntu Server</li>
         </ul>
       </div>
 
